	randicom.c --> randcm.c.  Add randui.c, randcmui.c, randlcui.c.
	* make.bat: Ditto.
	
	* gmp.h: Add prototypes for gmp_rand_init_ui() and
	gmp_rand_init_lc_ui().

	* gmp-impl.h: Add prototypes for __gmp_rand_init_common() and
	__gmp_rand_init_common_ui().

	* randlc.c, randcm.c, randclr.c, rand.c: Change #include of
	<gmp.h> to "gmp.h".

1999-05-12  Torbjorn Granlund  <tege@swox.com>

	* mpn/configure.in: Put generic m68k alternative last.

1999-05-04  Torbjorn Granlund  <tege@swox.com>

	* demos/pexpr.c (setup_error_handler): Use sigemptyset to create
	empty set (for portability).
	(fns): Fix typo '#if #if'.
	(mpz_eval_expr): Implement FERMAT and MERSENNE.

	* demos/pexpr.c: Cast longjmp argument via long to silent warnings on
	64-bit hosts.

1999-05-03  Torbjorn Granlund  <tege@swox.com>

	* demos/pexpr.c: Add #defines for GMP 1.x and 2.0 compatibility.

	* demos/pexpr.c (setup_error_handler): New function; take signal
	handler setup code from main(), with major modifications to use modern
	signal interface.
	(main): Remove signal handler setup code; call setup_error_handler.

1999-04-27  Torbjorn Granlund  <tege@swox.com>

	* mpn/configure.in: Fix typo, "sparc-*)" was "sparc)".

1999-04-21  Torbjorn Granlund  <tege@swox.com>

	* config.sub: Recognize ev6.

1999-04-12  Linus Nordberg  <linus.nordberg@canit.se>

	* urandom.c: Split up into randclr.c, randi.c, randi_lc.c,
	randicom.c.
	* randclr.c, randi.c, randi_lc.c, randicom.c: New files.
	* Makefile.in: Remove urandom.  Add randclr, randi, randi_lc,
	randicom.
	* make.bat: Ditto

1999-03-31  Torbjorn Granlund  <tege@matematik.su.se>

	* configure.in (sparc9-*-solaris2.[789]*, etc): New alternative.
	* mpn/configure.in: Use mt-sprc9 also for ultrasparc*-*-solaris2*.

1999-03-30  Linus Nordberg  <linus.nordberg@canit.se>

	* urandom.c (__gmp_rand_scheme): Change NULL->0.
	Include "gmp.h" instead of <gmp.h>.

1999-03-29  Linus Nordberg  <linus.nordberg@canit.se>
